# sesh

./: .gitignore  Cargo.toml  README.md  sesh.spec
.copr/: Makefile
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: app.rs  event.rs  lib.rs  main.rs
src/config/: hosts.rs  mod.rs  settings.rs  templates.rs
src/config/snapshots/: sesh__config__settings__tests__snapshot_default_keybindings.snap
src/integrations/: fzf.rs  git.rs  mod.rs  shell.rs
src/screen/: local.rs  mod.rs  parser.rs  remote.rs  types.rs
src/screen/snapshots/: sesh__screen__parser__tests__snapshot_session_names.snap  sesh__screen__parser__tests__snapshot_window_activities.snap
src/ui/: help.rs  input.rs  layout.rs  mod.rs  preview.rs  sessions.rs  settings.rs  templates.rs  theme.rs  windows.rs
templates/: default.yaml  webdev.yaml
tests/: integration_tests.rs
